# tracer

./: .gitignore  AGENTS.md  LLM for CS1 Notional Machines.md  Nov 18.txt  Nov 9.txt  README.md  SCHEMA_DOCUMENTATION.md  abgem.md  abstract-gem.md  abstract-op.md  abstract.md  abstract2.md  analysis_report.json  analysis_report.md  analyze.py  analyze_cli.py  analyze_cli_depr.py  analyze_v2.py  cli.py  damnthisisexpensive.py  detections_review.json  draft_gemini.md  draft_paper.md  ensemble.md  evaluation_schema.json  evaluations.db  evaluations_nano_oss.db  evaluations_old.db  example.jsonc  file.tex  future.md  future.txt  grade_sergio.py  inject_structure_errors.py  iticse_abstract_cer.md  iticse_abstract_experience_tools.md  iticse_abstract_position.md  junit_a1_summary.json  junit_a2_Q1_summary.json  junit_a2_Q2_summary.json  (+29 more)
.obsidian/: workspace.json
ACM_Conference_Proceedings_Primary_Article_Template/: references.bib  sample-sigconf-authordraft.tex  tracer-iticse2026.tex
analysis/: grading_analysis.md
authentic_seeded/: README.md  manifest.json
data/: misconception_catalog.json  old_results_direct.json  old_results_eme.json  question_insurance.md  results.json  results_direct.json  results_direct_2025-11-13T17-52-45.json  results_direct_2025-11-14T01-12-57.json  results_direct_2025-11-15T00-24-02.json  results_direct_2025-11-15T00-29-47.json  results_eme.json  results_eme_2025-11-13T17-52-45.json  results_reverse.json  results_reverse_2025-11-13T17-52-45.json  results_reverse_2025-11-14T01-18-23.json  results_reverse_2025-11-15T00-40-22.json  results_serialized.json  rubric_insurance.md  rubric_insurance2.md  v2_results_direct.json  v2_results_eme.json  v2_results_reverse.json
db/: __init__.py  analyzer.py  loader.py  manager.py  models.py  schema.sql  validator.py
docs/: 00-QUICK-START.md  01-GETTING-STARTED.md  02-PROJECT-STRUCTURE.md  03-USAGE-GUIDE.md  04-API-REFERENCE.md  05-ARCHITECTURE.md  ARCHITECTURE.md  DATABASE.md  GETTING_STARTED.md  INDEX.md  JSON_OUTPUT.md  MIGRATION_GUIDE.md  README.md  SCHEMA_GUIDE.md  SETUP.md  USAGE.md  analysis-methodology.md  analysis-pipeline.md  analysis3-investigation.md  architecture.md  cli-reference.md  complexity-gradient.md  configuration.md  context.md  dataset-format.md  dataset-generation.md  development.md  fuzzy_clustering.md  grading-workflow.md  later_CLI_PROVIDER_PLAN.md  matcher-ablation.md  matching.md  methodology.md  metrics-guide.md  misconception-analysis.md  misconception-catalog.md  notional-machines.md  paper.md  paper.tex  pipeline-overview.md  (+8 more)
experiment/: Martin_Josh_100013_eval.json  Reed_Oliver_100042_eval.json  Rodriguez_Elena_100018_eval.json  grading_playground.py  single_submission.py
modes/: __init__.py  direct_grading.py  eme_grading.py  reverse_grading.py
prompts/: direct_prompt.py  eme_prompt.py  reverse_prompt.py  strategies.py
pydantic_models/: README.md  __init__.py  evaluation.py  models.py  simple_evaluation.py
reports/: research_evidence_report.md
runs/: index.json
sandbox/: grading_schema.json  rubric_insurance2_preview.json  single_submission.py
student_evals/: Adams_Sophia_100050_eval.json  Anderson_Maya_200001_q1_eval.json  Anderson_Maya_200001_q2_eval.json  Anderson_Maya_200001_q3_eval.json  Anderson_Maya_200001_q4_eval.json  Bennett_Jaxon_200002_q2_eval.json  Bennett_Jaxon_200002_q3_eval.json  Bennett_Jaxon_200002_q4_eval.json  Brooks_Caleb_100051_eval.json  Campbell_Laura_100052_eval.json  Chen_Lily_200003_q1_eval.json  Chen_Lily_200003_q2_eval.json  Chen_Lily_200003_q3_eval.json  Chen_Lily_200003_q4_eval.json  Davis_Nina_100053_eval.json  Edwards_Liam_100054_eval.json  Flores_Isabella_100055_eval.json  Green_Oscar_100056_eval.json  Hall_Priya_100057_eval.json  Inoue_Takumi_100058_eval.json  Jackson_Riley_100059_eval.json  Johnson_Natalie_100010_eval.json  Kim_Soojin_100060_eval.json  Lewis_Aiden_100061_eval.json  Morgan_Jade_100062_eval.json  Nguyen_Tony_100063_eval.json  Ortiz_Marco_100064_eval.json  Patel_Sneha_100065_eval.json  Quinn_Sam_100066_eval.json  Rivera_Lucy_100067_eval.json  Smith_Hunter_100068_eval.json  Thompson_Ella_100069_eval.json  Underwood_Max_100070_eval.json  Vasquez_Ivan_100071_eval.json  sergio_eval.json  (+4 more)
(+8006 files in other folders)
