[project]
name = "eme-testing"
version = "0.1.0"
description = "Modular Ensembling Method Evaluation harness for GPT-5 vs EduAI."
authors = [{ name = "Research Automation", email = "research@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "openai>=1.50.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "typer>=0.9.0",
]

[project.scripts]
edubench = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompts", "utils"]
include = ["main.py", "README.md", "data"]
